--- a/steam-analyzer/package.json
+++ b/steam-analyzer/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "ssh steam-stats-prod 'cd /var/www/steam-stats && git pull && cd ./steam-analyzer && npm run build'"
   },
   "dependencies": {
     "lucide-react": "^0.562.0",
