--- a/steam-analyzer/backend/Cargo.toml
+++ b/steam-analyzer/backend/Cargo.toml
@@ -8,7 +8,7 @@ axum = "0.7"
 tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", features = ["json", "stream"] }
 sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
 dotenvy = "0.15"
 tower-http = { version = "0.5", features = ["cors"] }
