--- a/steam-analyzer/backend/Cargo.toml
+++ b/steam-analyzer/backend/Cargo.toml
@@ -13,3 +13,5 @@ sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
 dotenvy = "0.15"
 tower-http = { version = "0.5", features = ["cors"] }
 chrono = { version = "0.4", features = ["serde"] }
+governor = "0.7"
+nonzero_ext = "0.3"
