Make project containerized

--- a/steam-analyzer/deployment/steam-backend.service.example
+++ b/steam-analyzer/deployment/steam-backend.service.example
@@ -10,9 +10,10 @@ WorkingDirectory=/path/to/steam-stats/steam-analyzer/backend
 ExecStart=/path/to/steam-stats/steam-analyzer/backend/target/release/backend
 
 # Environment Variables
-Environment="PORT=3000"
-Environment="HOST=127.0.0.1"
-Environment="DATABASE_URL=sqlite://steam_stats.db"
+EnvironmentFile=/path/to/steam-stats/steam-analyzer/backend/.env
+# Environment="PORT=3000"
+# Environment="HOST=127.0.0.1"
+# Environment="DATABASE_URL=sqlite://steam_stats.db"
 # Environment="STEAM_API_KEY=your_production_key_here" 
 
 # Restart Policy
